<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageInitActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="164dp"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:onClick="manageInit"
        android:text="@string/button_init"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="164dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:onClick="managePayment"
        android:text="@string/button_payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="164dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:onClick="manageBatch"
        android:text="@string/button_batch"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="164dp"
        android:layout_height="66dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        android:onClick="manageReport"
        android:text="@string/button_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="164dp"
        android:layout_height="66dp"
        android:layout_marginStart="126dp"
        android:layout_marginLeft="126dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:onClick="managePeri"
        android:text="@string/button_peripheries"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />
</androidx.constraintlayout.widget.ConstraintLayout>